able to add and update item

--- a/ZenBiz/AppModules/Forms/Inventory/Items/UcItemDetails.resx
+++ b/ZenBiz/AppModules/Forms/Inventory/Items/UcItemDetails.resx
@@ -121,6 +121,12 @@
     <value>17, 17</value>
   </metadata>
   <metadata name="epName.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>147, 17</value>
+    <value>106, 19</value>
+  </metadata>
+  <metadata name="epCategory.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>258, 20</value>
+  </metadata>
+  <metadata name="epUOM.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>470, 22</value>
   </metadata>
 </root>
