--- a/ZenBiz/AppModules/Forms/Inventory/Stocks/FrmStocks.resx
+++ b/ZenBiz/AppModules/Forms/Inventory/Stocks/FrmStocks.resx
@@ -120,31 +120,34 @@
   <metadata name="toolStrip2.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
+  <metadata name="toolStrip2.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="btnStoreStockAdd.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAAtSURBVDhPY2CgJQic5/8PhNHFiQajBpBgAEwhqZh6BuAC
-        RCvEBUYNoIIBxAAA5qV0MSU56/cAAAAASUVORK5CYII=
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAAtSURBVDhPY2CgJQic7f8PhNHFiQajBpBgAEwhqZh6BuAC
+        RCvEBUYNoIIBxAAAqWhzlef00rgAAAAASUVORK5CYII=
 </value>
   </data>
   <data name="btnStoreStockEdit.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAADdSURBVDhPzZC/DgFBEIcVVLyFhkRUKg21Ti/ndi65iMQz
-        rN3VaZXoVIhEJ8EMDYUH0HoPRAbX7PmXSMSXbLPz+2YmE4n8koLEqGhiDzT1fX8Xs+svYdkxi6Qjae/J
-        yRk0du3MU1gGRUPQtPU0pbmJUDi2cw8JZJ7KTyjaVCWm6hITdjYEy66mUSDfVieqtGdxOxuCjxSSzd/L
-        DCjsfCPXQGJGaDzcL44fy45cZ0GujsLQ/NqkiYOPZUbo5ZSnlg2ewGDDrr/ENYs8i67CGbQwZ9ff4moq
-        eQaL9v9PuABluKmfyTmfnQAAAABJRU5ErkJggg==
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAADdSURBVDhPzZC/DgFBEIcVVLyFhkRUKg21whPIuZ1LLiLx
+        DGt3dVolOpXT6CSYoaHwAFrvgcjgmj3/Eon4km12ft/MZGKxX1KSGBdtHICmoe/vEnb9JSw7ZpF2JO09
+        GZxBY9/OPIVlUDQGTVtPU5abCIUTO/eQUOap/ISiTV1ipikxZWcjsOxqCkL5tjpRrTtL2tkIfKSIbP5e
+        ZkBh7xu5ARJzQuPhfnH8WHbkOg9ydRSG5tcmbRx9LDNCL6c8tWrwBAZbdv0lrlkUWXQVzqCDBbv+FldT
+        xTNYtv9/wgXdlaldkTBr+AAAAABJRU5ErkJggg==
 </value>
   </data>
   <data name="btnStoreStockDelete.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAACVSURBVEhLY2CAghO+Uf4n/KIPHA0I/LIjMOYfORikF2QG
-        yCyYuWBwPCC6E10xpRhkJtzl6JLUwmCfnAiI3I8uQS0MMpuBkjAnhEFmM6ALUhuPWkAQ09+CS9NmU4T3
-        23v9xWvBmzdvKMIDbwG6l0nFBC2gNh61gCCmvQU0L65BdSi6BLUwyGyGEwE0rjJpXunDAK2aLQA5Fnjx
-        A9TfeAAAAABJRU5ErkJggg==
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAACVSURBVEhLY2CAghO+Uf4n/KIPHA0I/LI1MOYfORikF2QG
+        yCyYuWBwPCC6E10xpRhkJtzl6JLUwmCfnAiI3I8uQS0MMpuBkjAnhEFmM6ALUhuPWkAQ09+C85NnUIT3
+        27v/xWvBy5cvKcIDbwG6l0nFBC2gNh61gCCmvQU0L65BdSi6BLUwyGyGEwE0rjJpXunDAK2aLQDMRnEp
+        fv8hXQAAAABJRU5ErkJggg==
 </value>
   </data>
 </root>
